# QuasarBell

./: CMakeLists.txt  LICENSE  README.md
demo/results/: lava.json  lava_torus.json  ld49.json  mandelflow.json  metro.json  rot_planet.json
src/: App.hpp  NodalEditor.cpp  NodalEditor.hpp  SFXBasicEditor.cpp  SFXBasicEditor.hpp  Synth.cpp  Synth.hpp  main.cpp
src/App/: AppInterface.cpp  AppInterface.hpp  BaseAttributes.cpp  BaseAttributes.hpp  BaseOperation.cpp  BaseOperation.hpp  BaseOperationNode.cpp  BaseOperationNode.hpp  GeometryNode.cpp  GeometryNode.hpp  ImageNode.hpp  SignalNode.cpp  SignalNode.hpp  TypedGeometryNode.cpp  TypedGeometryNode.hpp  TypedImageNode.cpp  TypedImageNode.hpp  TypedSdfNode.cpp  TypedSdfNode.hpp  TypedSignalNode.cpp  TypedSignalNode.hpp  UiSignalNodeBoard.cpp  UiSignalNodeBoard.hpp  UserFileInput.cpp  UserFileInput.hpp
src/Audio/: AudioRenderer.cpp  AudioRenderer.hpp  Error.hpp  PcmData.hpp  Signal.hpp  WavExporter.hpp
src/Core/: Factory.cpp  Factory.h  Math.hpp  ProgressiveWork.hpp  PseudoRand.cpp  PseudoRand.hpp  Quat.cpp  Quat.hpp  Vec2.cpp  Vec2.h  Version.hpp
src/Font/: DefaultFontMaker.cpp  DefaultFontMaker.h  FontMaker.cpp  FontMaker.h  GlyphRenderer.cpp  GlyphRenderer.h
src/GL/: GlError.h  GlQuad.cpp  GlQuadShader.cpp  GlQuadShader.h  GlSprite.cpp  GlSprite.h  GlSpriteShader.cpp  GlSpriteShader.h  RenderInterface.h  RenderInterfaceGlfw.cpp  RenderableTexture.cpp
src/GeometryOperation/: GeometryAttributes.cpp  GeometryAttributes.hpp  GeometryOperationType.cpp  GeometryOperationType.hpp
src/Graphics/: CustomProgram.cpp  CustomProgram.h  GlError.h  GlQuad.cpp  GlQuadShader.h  GlSprite.cpp  RenderInterface.h  RenderInterfaceGlfw.cpp  RenderableTexture.cpp  RenderableTexture.h  TgaExporter.cpp  TgaExporter.hpp
src/ImageOperation/: FrameRenderer.cpp  FrameRenderer.hpp  GlslBuilder.cpp  GlslBuilder.hpp  GlslProgramPipeline.cpp  GlslProgramPipeline.hpp  HighResOutput.cpp  HighResOutput.hpp  ImageAttributes.cpp  ImageAttributes.hpp  ImageBasicOperators.cpp  ImageBasicOperators.hpp  ImageNoises.cpp  ImageNoises.hpp  ImageOperation.cpp  ImageOperation.hpp  ImageOperationType.cpp  ImageOperationType.hpp  ImageOperations.cpp  ImageOperations.hpp  ImageSampling.cpp  ImageSampling.hpp  ImageUniforms.cpp  ImageUvOperations.cpp  ImageUvOperations.hpp  TextureBuilder.cpp  TextureBuilder.hpp
src/Json/: Json.cpp  JsonReaderWriter.cpp  JsonReaderWriter.hpp
src/ReaderWriter/: FileIO.cpp  FileIO.hpp  RwHelpers.cpp  RwHelpers.hpp  SignalOperationsRW.cpp  SignalOperationsRW.hpp
src/SdfOperation/: RayMarcherBuilder.cpp  RayMarcherBuilder.hpp  SdfBasicOperations.cpp  SdfBasicOperations.hpp  SdfOperation.cpp  SdfOperation.hpp  SdfOperationType.cpp  SdfOperationType.hpp  SdfOperations.cpp  SdfOperations.hpp  SdfPrimitives.cpp  SdfPrimitives.hpp  SdfSampling.cpp  SdfSampling.hpp  SdfTransforms.cpp  SdfTransforms.hpp  SdfUniforms.cpp  SdfVoxel.cpp  SdfVoxel.hpp  VoxelExporter.cpp  VoxelExporter.hpp
src/SignalOperation/: EnvelopOperation.cpp  EnvelopOperation.hpp  FilterOperation.cpp  FilterOperation.hpp  Harmonics.cpp  Harmonics.hpp  KeySampler.cpp  KeySampler.hpp  MixOperation.cpp  MixOperation.hpp  OperationType.cpp  OperationType.hpp  Operations.cpp  Operations.hpp  Oscillator.cpp  Oscillator.hpp  PcmBuilder.cpp  PcmBuilder.hpp  PitchSelector.cpp  PitchSelector.hpp  Quantizer.cpp  Quantizer.hpp  SignalAttributes.cpp  SignalAttributes.hpp  SignalOperation.cpp  SignalOperation.hpp  SignalOperations.cpp  SignalOperations.hpp  StepOperation.cpp  StepOperation.hpp  Waveform.cpp  Waveform.hpp
src/UI/: UiButton.cpp  UiButton.h  UiConnections.cpp  UiConnections.h  UiContainer.cpp  UiContainer.h  UiEvent.h  UiForm.cpp  UiForm.h  UiFrame.cpp  UiFrame.h  UiInput.cpp  UiInput.h  UiList.cpp  UiList.h  UiNode.cpp  UiNode.h  UiNodeBoard.cpp  UiNodeBoard.h  UiPin.cpp  UiPin.h  UiRect.cpp  UiRect.h  UiSlider.cpp  UiSlider.h  UiSystem.cpp  UiSystem.h  UiText.cpp  UiText.h
src/Ui/: UiButton.h  UiConnections.cpp  UiConnections.h  UiContainer.cpp  UiContainer.h  UiForm.h  UiFrame.cpp  UiFrame.h  UiNode.cpp  UiNode.h  UiNodeBoard.h  UiPin.h  UiSlider.h  UiSystem.cpp  UiText.h
src/app/: App.hpp  AppInterface.cpp  AppInterface.hpp  BaseOperationNode.cpp  BaseOperationNode.hpp  Gui.cpp  Gui.hpp  ImageNode.cpp  ImageNode.hpp  NodalEditor.cpp  NodalEditor.hpp  NodeContextMenu.cpp  NodeContextMenu.hpp  NodePropertiesEdit.cpp  NodePropertiesEdit.hpp  SFXBasicEditor.cpp  SFXBasicEditor.hpp  SdfNode.cpp  SdfNode.hpp  SignalNode.cpp  SignalNode.hpp  SignalOperationNode.cpp  SignalOperationNode.hpp  Synth.cpp  Synth.hpp  TypedImageNode.cpp  TypedImageNode.hpp  TypedSdfNode.cpp  TypedSdfNode.hpp  TypedSignalNode.cpp  TypedSignalOperationNode.cpp  TypedSignalOperationNode.hpp  UiSignalNodeBoard.cpp  UiSignalNodeBoard.hpp  UserFileInput.cpp  UserFileInput.hpp
src/audio/: AudioRenderer.cpp  AudioRenderer.hpp  PcmData.cpp  PcmData.hpp  Signal.cpp  WavExporter.cpp
src/graphics/: CustomProgram.cpp  CustomProgram.h  GlError.h  GlQuad.cpp  GlQuad.h  GlQuadShader.cpp  GlSprite.cpp  GlSprite.h  GlSpriteShader.cpp  GlSpriteShader.h  RenderInterface.h  RenderInterfaceGlfw.cpp  RenderableTexture.cpp  RenderableTexture.h  TgaExporter.cpp  TgaExporter.hpp
src/gui/: Gui.cpp  Gui.hpp  InputEffect.cpp  InputEffect.hpp  Keyboard.cpp  Keyboard.hpp  Math.hpp  NodeContextMenu.cpp  NodeContextMenu.hpp  NodePropertiesEdit.cpp  NodePropertiesEdit.hpp  PostEffect.cpp  PostEffect.hpp  SignalEdit.cpp  SignalEdit.hpp  UserFileInput.cpp  UserFileInput.hpp
src/io/: FileExplorer.cpp  FileIO.cpp  FileIO.hpp  InputRW.cpp  InputRW.hpp  PostRW.cpp  PostRW.hpp  RwHelpers.cpp  RwHelpers.hpp  SignalOperationsRW.cpp  SignalOperationsRW.hpp  SignalRW.cpp  SignalRW.hpp
src/json/: json.cpp  jsonrw.cpp
src/readerwriter/: FileExplorer.cpp  FileExplorer.hpp  FileIO.cpp  FileIO.hpp  RwHelpers.cpp  RwHelpers.hpp  SignalOperationsRW.cpp  SignalOperationsRW.hpp  SignalRW.cpp  SignalRW.hpp
src/render/: AudioRenderer.cpp  AudioRenderer.hpp  Format.hpp
src/signal/: LinearSamplers.cpp  LinearSamplers.hpp  (+12 more)
(+68 files in other folders)
